Added http transport layer. Covered handler with unit tests
